# dash

./: .gitignore  Dockerfile  README.md  docker-compose.yml  domino_job.sh  layout_state.json  main.py  pyproject.toml  run_local.py  run_server.py
data/sample/: sample_data.csv
docs/: architecture.md  data_sources.md
scripts/: generate_sample_data.py
src/: __init__.py  app.py  config.py  index.py  settings.py
src/alerts/: __init__.py  alert_engine.py  alert_rules.yaml
src/assets/: custom.css
src/callbacks/: __init__.py  alert_callbacks.py  chart_callbacks.py  dataset_callbacks.py  filter_callbacks.py  graph_builder_callbacks.py  layout_callbacks.py  metric_callbacks.py  model_callbacks.py  refresh_callbacks.py
src/components/: __init__.py  alert_block.py  chart_block.py  data_table_block.py  filter_block.py  graph_builder_modal.py  metric_card.py  model_info_card.py  refresh_button.py
src/data/: __init__.py  cache.py  data_manager.py
src/integrations/: __init__.py  dvc_client.py  mlflow_client.py
src/layouts/: __init__.py  footer.py  header.py  main_content.py  sidebar.py
src/scheduling/: __init__.py  scheduler.py
src/utils/: __init__.py  formatters.py  helpers.py  logger.py  validators.py
tests/: __init__.py  conftest.py
tests/test_alerts/: __init__.py  test_alert_engine.py
tests/test_components/: __init__.py  test_alert_block.py  test_chart_block.py  test_filter_block.py  test_metric_card.py
tests/test_data/: __init__.py  test_connectors.py  test_data_manager.py  test_transformers.py
tests/test_integrations/: __init__.py  (+2 more)
(+11 files in other folders)
